chinga tu madre armando

--- a/gateway/package.json
+++ b/gateway/package.json
@@ -86,6 +86,11 @@
     "@fortawesome/fontawesome-svg-core": "6.6.0",
     "@fortawesome/free-solid-svg-icons": "6.6.0",
     "@fortawesome/vue-fontawesome": "3.0.8",
+    "@fullcalendar/core": "^6.1.20",
+    "@fullcalendar/daygrid": "^6.1.20",
+    "@fullcalendar/interaction": "^6.1.20",
+    "@fullcalendar/timegrid": "^6.1.20",
+    "@fullcalendar/vue3": "^6.1.20",
     "@vue/compat": "3.4.38",
     "@vuelidate/core": "2.0.3",
     "@vuelidate/validators": "2.0.4",
