--- a/gateway/package.json
+++ b/gateway/package.json
@@ -110,6 +110,7 @@
     "@eslint/js": "9.9.1",
     "@pinia/testing": "0.1.5",
     "@tsconfig/node18": "18.2.4",
+    "@types/jsdom": "^28.0.0",
     "@types/node": "20.11.25",
     "@types/sinon": "17.0.3",
     "@vitejs/plugin-vue": "5.1.2",
